# Tasker

./: .gitignore  main.py  pyproject.toml
core/: db.py  exceptions.py  navigator.py  storage.py  tables.py
model/: ejournal.py  item.py  task.py  token.py  user.py
models/: ejournal.py  task.py  token.py  user.py
page/: login.py  notify.py  register.py  task_dialog.py
pages/: register.py
ui/: img_qr.py  login.ui  login_dialog.py  main.ui  main_ui.py  notify_dialog.py  register.ui  register_dialog.py  task.ui  task_dialog.py
